# Ex4

./: CMakeLists.txt
include/: MultiPlayerFlow.h  SerializeObject.h  Settings.h
src/: GameClient.cpp  MultiPlayerFlow.cpp  ReversiGameMenu.cpp  SerializeObject.cpp
